# miller-wireless-pedal

./: README.md
fw/: main.c
fw/patch/: README.md
sw/: CMakeLists.txt  bluetooth_helper.cpp  main.c  main.cpp  ui.cpp
sw/config/: sdk_config.h
sw/include/: bluetooth_helper.h  ui.h
sw/linker/: blinky_gcc_nrf52.ld
sw/patch/: boards.h
